# blueprint

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  demo_spec.yaml  demo_spec_lore.yaml  gemini_cli_config.json  justfile  main.py  pyproject.toml  test_blueprint.py  test_evals.py  test_gemini.py  test_lore_integration.py  test_sandbox.py
.gemini/agents/: auditor.md
blueprint/: compiler.py  enforcer.py  evaluator.py  fleet_dispatch.py  fleet_watcher.py  guardian.py  journal.py  orchestrator.py  parser.py  registry.py  tracer.py
blueprints/: fleet_dispatch.yaml
blueprints/factory_generator/: plan_entitlements.yaml  tipping_config.yaml
blueprints/meta/: facade_generator.yaml  self_healer.yaml
evals/: golden_cases.yaml
examples/: 01_basic_extraction.py  02_lore_memory.py  03_secure_execution.py  04_background_listener.py  05_factory_generator_demo.py  06_orchestrator_demo.py  07_meta_orchestration.py  08_self_healing_demo.py  facade_request.txt
plans/: plan-fleet-dispatch.md
tests/: test_blueprint.py  test_fleet_dispatch.py  test_fleet_watcher.py  test_journal.py  test_timer_triggers.py  test_tracer.py  test_tracing_integration.py
vault/: sandbox.py  tool_router.py
