[project]
name = "shuru-blueprint"
version = "0.1.0"
description = "Spec-driven LLM agent framework with structured enforcement, Lore memory integration, and secure sandbox execution."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.66.0",
    "instructor>=1.14.5",
    "jsonref>=1.1.0",
    "openai>=2.24.0",
    "anthropic>=0.45.2",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "diskcache>=5.6.3",
]
